Fixing footer wrap

--- a/code/css/1_template.css
+++ b/code/css/1_template.css
@@ -339,6 +339,10 @@ dl.article-info{
 .wrapper-footer{
 	padding-top: 17px;
 }
+.footer-content{
+	padding-left: 20px;
+	padding-right: 20px;
+}
 .border-closure-ft{
 	margin-left: -20px;
 	margin-right: -20px;
